# CCRE_Card_Unique_ID_Exporter

./: LICENSE  README.md  build.sh  pyproject.toml  requirements.txt  setup.py
ccre_card_unique_id_exporter/: module.py  parse.py
package/: __init__.py  module.py
