[project]
name = "CCRE_Card_Unique_ID_Exporter"
version = "0.0.3"
description = "A simple Card Unique ID Exporter"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["APDU", "Smart Card", "IC Card", "USIM", "Credit Card or something else"]
authors = [
    { name = "taxi_tabby", email = "rkdmf0000@gmail.com" }
]
maintainers = [
  { name = "taxi_tabby", email = "rkdmf0000@gmail.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
]
dependencies = ["pyscard==2.2.1"]



[project.optional-dependencies]
dev = ["check-manifest"]


[project.urls]
"Homepage" = "https://github.com/taxi-tabby/CCRE_Card_Unique_ID_Exporter"


